<resources>
    <string name="app_name">Gmat-app-RE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="nav_title_pre_test">抢先课程</string>
    <string name="nav_title_make_test">做题模考</string>
    <string name="nav_title_ready_community">备考社区</string>
    <string name="nav_title_small_course">小讲堂</string>
    <string name="nav_title_person_center">个人中心</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
